--- a/layouts/photos/single.html
+++ b/layouts/photos/single.html
@@ -1,7 +1,7 @@
 {{ partial "header.html" . }}
 {{ partial "content-header.html" . }}
 
-<div class="photoset__item--single" itemscope itemtype="http://schema.org/Photograph">
+<main class="photoset__item--single" itemscope itemtype="http://schema.org/Photograph">
   {{ .Content }}
 </div>
 
