--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -30,9 +30,13 @@ body {
    width: 100%;
    display: -webkit-flex;
    display: flex;
+   -webkit-flex-wrap: wrap;
    flex-wrap: wrap;
+   -webkit-flex-direction: row;
    flex-direction: row;
+   -webkit-align-items: stretch;
    align-items: stretch;
+   -webkit-justify-content: center;
    justify-content: center;
 }
 
@@ -46,6 +50,7 @@ body {
    display: flex;
    position: relative;
    margin: 10px;
+   -webkit-align-items: center;
    align-items: center;
    list-style-type: none;
 }
@@ -53,18 +58,26 @@ body {
 .photoset__item--single {
    display: -webkit-flex;
    display: flex;
+   -webkit-flex-wrap: nowrap;
    flex-wrap: nowrap;
+   -webkit-flex-direction: column;
    flex-direction: column;
+   -webkit-justify-content: center;
    justify-content: center;
+   -webkit-align-items: center;
    align-items: center;
 }
 
 .photoset__item--overlay {
    display: -webkit-flex;
    display: flex;
+   -webkit-flex-wrap: wrap;
    flex-wrap: wrap;
+   -webkit-flex-direction: column;
    flex-direction: column;
+   -webkit-justify-content: flex-end;
    justify-content: flex-end;
+   -webkit-align-items: stretch;
    align-items: stretch;
    width: 100%;
    height: 100%;
@@ -100,8 +113,11 @@ body {
 /* Smartphones (portrait) ----------- */
 @media only screen and (max-width : 320px) {
    .photoset {
+      -webkit-flex-direction: column;
       flex-direction: column;
+      -webkit-justify-content: center;
       justify-content: center;
+      -webkit-align-items: center;
       align-items: center;
    }
 }
