Simplify photos section; Remove bootstrap dependency and webfonts

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,3 @@
-<footer class="footer">
-  <p>
-    &copy; 2015 Jan Alonzo. All content are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
-  </p>
+<footer>
+  This <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/StillImage" rel="dct:type">work</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://www.janalonzo.com" property="cc:attributionName" rel="cc:attributionURL">Jan Michael C. Alonzo</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.<br />Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="https://www.janalonzo.com" rel="dct:source">https://www.janalonzo.com</a>.
 </footer>
