--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -1,29 +1,85 @@
 
 html,
 body {
-   height: 100%;
-   background-color: rgb(0,0,0);
-   background-color: rgba(0,0,0,0.8);
-   font-family: "Roboto Slab", Georgia, Cambria "Times New Roman", Times, serif;
-   color: rgb(35, 35, 35);
-   color: rgba(35, 35, 35, 0.8);
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-align-items: stretch;
+  align-items: stretch;
+  -webkit-justify-content: center;
+  justify-content: center;
+  background-color: rgb(0,0,0);
+  font-family: Georgia, Cambria "Times New Roman", Times, serif;
+  min-height: 100vh;
 }
 
-.navbar-inverse {
-   background-image: none;
-   background-color: rgb(41, 41, 41);
-   background-color: rgba(41, 41, 41, 0.8);
+nav {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
 }
 
-.footer, .footer a {
-   font-family: "Open Sans", serif;
-   color: rgb(204,204,204);
-   color: rgba(204,204,204,.8);
-   font-size: 0.9em;
-   width: 100%;
-   margin-left: auto;
-   margin-right: auto;
+main {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex: 1;
+  flex: 1;
+}
+
+footer, footer a {
+   color: rgb(119,119,119);
+   color: rgba(119,119,119,.8);
+   font-size: 0.8em;
    text-align: center;
+}
+
+a, a:hover {
+  color: rgb(119,119,119);
+  color: rgba(119,119,119,.8);
+  text-decoration: none;
+}
+
+figure, h2, p {
+  margin:0;
+}
+
+img {
+  border-radius: 1px;
+}
+
+ol.breadcrumb {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0;
+  padding: 0.6em;
+}
+
+li {
+  display: inline-block;
+  list-style-type: none;
+}
+
+.breadcrumb {
+   background-image: none;
+   background-color: rgb(0, 0, 0);
+   background-color: rgba(0, 0, 0, 0.8);
+}
+
+.breadcrumb>li+li:before {
+  color: rgb(119,119,119);
+  color: rgba(119,119,119,.8);
+  content: "\21e5\00a0";
+}
+
+.breadcrumb .active {
+  color: rgb(255,255,255);
+  color: rgba(255,255,255,.8);
 }
 
 .photoset {
@@ -38,10 +94,10 @@ body {
    align-items: stretch;
    -webkit-justify-content: center;
    justify-content: center;
+   padding-left: 0;
 }
 
 .photoset__item img {
-   width: 312px;
    height: auto;
 }
 
@@ -129,11 +185,17 @@ body {
       -ms-flex: 1 0 100px;
       flex: 1 0 100px;
    }
+
+   img {
+     max-height: 85vh;
+   }
 }
 
 @media only screen and (min-width: 1024px) {
-   /* FIXME is this necessary? */
    .photoset__item--single img {
-      max-height: 1024px;
+     max-height: 85vh;
+   }
+   .photoset__item img {
+     width: 15vw;
    }
 }
