--- a/layouts/page/single.html
+++ b/layouts/page/single.html
@@ -1,6 +1,10 @@
 {{ partial "header.html" . }}
-{{ partial "content-header.html" . }}
-
+<nav class="navbar" role="navigation">
+  <ol class="breadcrumb">
+    <li><a href="/index.html">Cover</a></li>
+    <li class="active">{{ .Title }}</li>
+  </ol>
+</nav>
 <div class="container-fluid">
   <div class="row">
     <div class="col-xs-18 col-md-12">
