--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -23,8 +23,8 @@
   <link rel="canonical" href="{{ .Permalink }}">
   {{ if .RSSlink }}<link href="{{ .RSSlink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}" />{{ end }}
   <script src="{{ $baseurl }}/js/ga.min.js"></script>
-  <link rel="stylesheet" href="{{ $baseurl }}/css/bootstrap.min.css"/>
+<!--  <link rel="stylesheet" href="{{ $baseurl }}/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="{{ $baseurl }}/css/bootstrap-theme.min.css"/>
-  <link rel="stylesheet" href="{{ $baseurl }}/css/site.min.css"/>
+--><link rel="stylesheet" href="{{ $baseurl }}/css/site.min.css"/>
 </head>
 <body>
