--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,13 +1,25 @@
-/*
- * Globals
- */
 
 body {
-   background-color: rgb(255, 255, 255);
-   background-color: rgba(255, 255, 255, 0.8);
-   font-family: "Roboto Slab", Georgia, Cambria "Times New Roman", Times, serif;
-   color: rgb(35, 35, 35);
-   color: rgba(35, 35, 35, 0.8);
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-align-items: stretch;
+  align-items: stretch;
+  -webkit-justify-content: center;
+  justify-content: center;
+  min-height: 98vh;
+  background-color: rgb(255, 255, 255);
+  background-color: rgba(255, 255, 255, 0.8);
+  font-family: Georgia, Cambria "Times New Roman", Times, serif;
+  color: rgb(35, 35, 35);
+  color: rgba(35, 35, 35, 0.8);
+}
+
+p {
+  margin: 0;
 }
 
 a, a:hover, a:active {
@@ -16,198 +28,238 @@ a, a:hover, a:active {
    text-decoration: none;
 }
 
-h1, .h1,
-h2, .h2,
-h3, .h3,
-h4, .h4,
-h5, .h5,
-h6, .h6 {
+h1, h2, h3,
+h4, h5, h6 {
    margin-top: 0;
-   font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
-   font-weight: 700; 
-   color: #333; /* #ddd;*/
-   font-size: 32px;
+   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+   font-weight: 700;
+   color: rgb(51, 51, 51);
+   color: rgba(51, 51, 51, 1.0);
+   font-size: 42px;
    letter-spacing: -0.01em;
-   margin-bottom: 8px;
+   margin-bottom: 4px;
 }
 
-/*
- * Override Bootstrap's default container.
- */
+li {
+  display: inline-block;
+  list-style-type: none;
+}
 
-@media (min-width: 1200px) {
-  .container {
-    width: 970px;
+blockquote {
+  font-style: italic;
+  font-size: 0.6em;
+  background-color: rgb(141,141,141);
+  background-color: rgba(141,141,141, 0.2);
+  border-radius: 4px;
+  padding: 2em;
+  margin-bottom: 2em;
+  margin-left: 6px;
+  margin-right: 6px;
+}
+
+nav {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  opacity: 0.8;
+  background-color: rgb(255,255,255);
+  background-color: rgba(255,255,255,0.6);
+  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.05);
+  -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.05);
+  box-shadow: 0 1px 2px rgba(0,0,0,0.05);
+}
+
+main {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex: 1;
+  flex: 1;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+}
+
+footer, footer a {
+  color: rgb(51,51,51);
+  color: rgba(51,51,51,.7);
+  font-size: 0.8em;
+  text-align: center;
+}
+
+nav > ol  {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0;
+  padding: 0.6em;
+}
+
+.breadcrumb>li+li:before {
+  color: rgb(119,119,119);
+  color: rgba(119,119,119,.8);
+  content: "\21e5\00a0";
+}
+
+main .content > header {
+  padding: 2em;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  color: rgb(0,0,0);
+  color: rgba(0,0,0,0.6);
+  font-size: 18px;
+  word-wrap: break-word;
+  letter-spacing: -0.02em;
+}
+
+main .content .title {
+  margin-top: 30px;
+  margin-bottom: 0;
+  font-size: 50px;
+  font-weight: 700;
+  letter-spacing: -0.04em;
+}
+
+main > .content {
+  -webkit-display: flex;
+  display: flex;
+  -webkit-justify-content: flex-start;
+  justify-content: flex-start;
+  -webkit-align-items: flex-start;
+  align-items: flex-start;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+}
+
+main article > div {
+  -webkit-display: flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-align-items: flex-start;
+  align-items: flex-start;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding: 2em;
+}
+
+main article p {
+  margin-bottom: 20px;
+  line-height: 1.45;
+  letter-spacing: .005rem;
+  font-size: 18px;
+}
+
+main article header {
+  margin-bottom: 30px;
+}
+
+main article header time {
+  font-size: 0.9em;
+  opacity: 0.6;
+}
+
+main article p a,
+main article p a:hover,
+main article p a:active {
+   color: rgb(0,0,0);
+   color: rgba(0,0,0,0.8);
+   text-decoration: underline;
+}
+
+main > aside {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex: 0 0 35em;
+  flex: 0 0 35em;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  margin-top: 2em;
+  padding: 2em;
+}
+
+.aside {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: flex-start;
+  justify-content: flex-start;
+  -webkit-align-items: flex-start;
+  align-items: flex-start;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  background-color: rgb(141,141,141);
+  background-color: rgba(141,141,141, 0.2);
+  border-radius: 8px;
+  padding: 1em;
+  margin-bottom: 1em;
+}
+
+.aside p {
+  margin-bottom: 20px;
+}
+
+.aside a, .aside p {
+  line-height: 1.45;
+  letter-spacing: .005rem;
+  font-size: 16px;
+  color: rgb(35,35,35);
+  color: rgba(35,35,35,.8);
+}
+
+.aside ol {
+  padding-left: 0;
+}
+
+.aside > ol >li+li:before {
+  content: ",";
+}
+
+.readtime {
+  font-size: 0.9em;
+  color: rgb(0,0,0);
+  color: rgba(0,0,0,0.4);
+}
+
+
+/* http://css-tricks.com/snippets/css/media-queries-for-standard-devices/ */
+/* Smartphones (Portrait and landscape) ----------- */
+@media only screen
+and (min-width : 321px)
+and (max-device-width : 480px) {
+  main {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+  main .spacer {
+    padding: 0;
+    margin: 0;
+    -webkit-flex: 0;
+    flex: 0;
+  }
+  main > aside {
+    -webkit-flex: 0;
+    flex: 0;
   }
 }
 
-
-/*
- * Masthead for nav
- */
-
-.blog-masthead {
-   background-color: rgb(255,255,255);
-   background-color: rgba(255,255,255,0.6);
-   opacity: 0.8;
-   -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.05);
-   -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.05);
-   box-shadow: 0 1px 2px rgba(0,0,0,0.05);
-}
-
-/* Nav links */
-.blog-nav-item {
-   position: relative;
-   display: inline-block;
-   padding: 10px;
-   font-weight: 400;
-   font-size: 16px;
-   color: rgb(0, 0, 0);
-   color: rgba(0, 0, 0, 0.8);
-   letter-spacing: 0.1em;
-}
-.blog-nav-item:hover,
-      .blog-nav-item:focus {
-         color: rgb(66,139,202);
-         color: rgba(66,139,202, 0.8);
-         text-decoration: none;
-      }
-
-/* Active state gets a caret at the bottom */
-.blog-nav .active {
-   color: rgb(0, 0, 0);
-   color: rgba(0, 0, 0, 0.8);
-   font-weight: 800;
-}
-.blog-nav .active:after {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  width: 0;
-  height: 0;
-  margin-left: -5px;
-  vertical-align: middle;
-  content: " ";
-  border-right: 5px solid transparent;
-  border-bottom: 5px solid;
-  border-left: 5px solid transparent;
-}
-
-
-/*
- * Blog name and description
- */
-
-.blog-header {
-   padding-top: 20px;
-   padding-bottom: 20px;
-}
-.blog-title {
-   margin-top: 30px;
-   margin-bottom: 0;
-   font-size: 52px;
-   font-weight: 700;
-   letter-spacing: -0.01em;
-   color: rgb(0,0,0);
-   color: rgba(0,0,0,0.8);
-}
-.blog-description {
-   font-size: 20px;
-   color: rgb(51,51,51);
-   color: rgba(51,51,51,.7);
-}
-
-
-/*
- * Main column and sidebar layout
- */
-
-.blog-main {
-  font-size: 16px;
-  line-height: 1.5;
-}
-
-/* Sidebar modules for boxing content */
-.blog-sidebar {
-   background-color: #fafafa;
-   color: rgb(0,0,0);
-   color: rgba(0,0,0,0.44);
-}
-
-.blog-sidebar a {
-   color: rgb(0,0,0);
-   color: rgba(0,0,0,0.44);
-}
-
-.blog-sidebar h3, .blog-sidebar h4 {
-   font-weight: 400;
-}
-
-.sidebar-module {
-  padding: 15px;
-  margin: 0 -15px 15px;
-}
-.sidebar-module-inset {
-  padding: 15px;
-  border-radius: 4px;
-}
-.sidebar-module-inset p:last-child,
-.sidebar-module-inset ul:last-child,
-.sidebar-module-inset ol:last-child {
-  margin-bottom: 0;
-}
-
-
-/* Pagination */
-.pager {
-  margin-bottom: 60px;
-  text-align: left;
-}
-.pager > li > a {
-  width: 140px;
-  padding: 10px 20px;
-  text-align: center;
-  border-radius: 30px;
-}
-
-
-/*
- * Blog posts
- */
-
-.blog-post {
-  margin-bottom: 60px;
-}
-.blog-post-title {
-  margin-bottom: 5px;
-  font-size: 48px;
-}
-.blog-post-meta {
-   margin-bottom: 20px;
-   color: rgb(51,51,51);
-   color: rgba(51,51,51,.7);
-}
-
-
-/*
- * Footer
- */
-
-.footer {
-   padding: 40px 0;
-   color: rgb(51,51,51);
-   color: rgba(51,51,51,.7);
-   text-align: center;
-   background-color: #f9f9f9;
-   border-top: 1px solid #e5e5e5;
-}
-.footer p:last-child {
-  margin-bottom: 0;
-}
-
-/** My additions/ */
-.readtime {
-   font-size: 0.9em;
-   color: rgb(0,0,0);
-   color: rgba(0,0,0,0.3);
+/* iPads (portrait and landscape) ----------- */
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px) {
+  main {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+  main .spacer {
+    padding: 0;
+    margin: 0;
+    -webkit-flex: 0;
+    flex: 0;
+  }
+  main > aside {
+    -webkit-flex: 0;
+    flex: 0;
+  }
 }
