--- a/assets/css/cover.css
+++ b/assets/css/cover.css
@@ -1,139 +1,154 @@
 
-html, body{
+body {
+   margin: 0;
+   padding: 0;
+}
+
+nav > ol  {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0;
+  padding: 0.6em;
+}
+
+li {
+  display: inline-block;
+  list-style-type: none;
+}
+
+.parallax {
+   perspective: 1px;
+   perspective-origin: 100%;
+   height: 100vh;
+   overflow-x: hidden;
+   overflow-y: auto;
+}
+
+.parallax__group {
+   position: relative;
+   height: 100vh;
+   transform-style: preserve-3d;
+   transition: transform 0.5s;
+}
+
+.parallax__layer {
+   position: absolute;
+   top: 0;
+   right: 0;
+   bottom: 0;
+   left: 0;
+   transform-origin: 100%;
+}
+
+.parallax__layer--base {
+   transform: translateZ(0);
+   z-index: 3;
+}
+
+.parallax__layer--back {
+   transform: translateZ(-1px) scale(2);
+   z-index: 2;
+}
+
+/* slide-specific styles */
+.overview__cover .parallax__layer {
    background: #eee url("/assets/bg.jpg") no-repeat center center fixed;
-/*   background-repeat: no-repeat;
-   background-position: center center;
-   background-attachment: fixed;
-   background-image: url("//www.janalonzo.com/assets/bg.jpg");*/
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
 }
 
-/** Cover.css from bootstrap's cover.css
-
-/*
- * Globals
- */
-
-/* Links */
-a,
-a:focus,
-a:hover {
-  color: #fff;
+.overview__cover {
+   background-color: green;
+   z-index: 4;
 }
 
-/* Custom default button */
-.btn-default,
-.btn-default:hover,
-.btn-default:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritence from `body` */
-  background-color: #fff;
-  border: 1px solid #fff;
+.overview__cover--content {
+   display: -webkit-flex;
+   display: flex;
+   -webkit-flex-wrap: wrap;
+   flex-wrap: wrap;
+   -webkit-flex-direction: column;
+   flex-direction: column;
+   -webkit-justify-content: flex-start;
+   justify-content: flex-start;
+
 }
 
-
-/*
- * Base structure
- */
-
-html,
-body {
-  height: 100%;
-  background-color: #333;
-}
-body {
-  color: #fff;
-  text-align: center;
-  text-shadow: 0 1px 3px rgba(0,0,0,.5);
-}
-
-/* Extra markup and styles for table-esque vertical and horizontal centering */
-.site-wrapper {
-   display: table;
-   width: 100%;
-   height: 100%; /* For at least Firefox */
-   min-height: 100%;
-   -moz-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-   -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-   box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-}
-.site-wrapper-inner {
-  display: table-cell;
-  vertical-align: top;
-}
-.cover-container {
-  margin-right: auto;
-  margin-left: auto;
+.overview__cover--content nav {
+   display: -webkit-flex;
+   display: flex;
+   -webkit-justify-content: flex-end;
+   justify-content: flex-end;
+   -webkit-align-items: flex-start;
+   align-items: flex-start;
+   -webkit-flex-direction: row;
+   flex-direction: row;
+   -webkit-flex-wrap: wrap;
+   flex-wrap: wrap;
+   margin: 0;
+   padding: 0;
+   opacity: 0.8;
+   background-color: rgb(255,255,255);
+   background-color: rgba(255,255,255,0.04);
+   -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.05);
+  -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.05);
+   box-shadow: 0 1px 2px rgba(0,0,0,0.05);
 }
 
-/* Padding for spacing */
-.inner {
-  padding: 30px;
+.breadcrumb>li+li:before {
+   padding-left: 1em;
+   content: "\00a0";
 }
 
-
-/*
- * Header
- */
-.masthead-brand {
-  margin-top: 10px;
-  margin-bottom: 10px;
+.overview__cover--content article {
+   display: -webkit-flex;
+   display: flex;
+   -webkit-flex-wrap: wrap;
+   flex-wrap: wrap;
+   -webkit-flex-direction: column;
+   flex-direction: column;
+   -webkit-align-items: center;
+   align-items: center;
+   -webkit-justify-content: center;
+   justify-content: center;
+   min-height: 90vh;
 }
 
-.masthead-nav > li {
-  display: inline-block;
-}
-.masthead-nav > li + li {
-  margin-left: 20px;
-}
-.masthead-nav > li > a {
-  padding-right: 0;
-  padding-left: 0;
-  font-size: 16px;
-  font-weight: bold;
-  color: #fff; /* IE8 proofing */
-  color: rgba(255,255,255,.75);
-  border-bottom: 2px solid transparent;
-}
-.masthead-nav > li > a:hover,
-.masthead-nav > li > a:focus {
-  background-color: transparent;
-  border-bottom-color: #a9a9a9;
-  border-bottom-color: rgba(255,255,255,.25);
-}
-.masthead-nav > .active > a,
-.masthead-nav > .active > a:hover,
-.masthead-nav > .active > a:focus {
-  color: #fff;
-  border-bottom-color: #fff;
+.lead, .cover-heading {
+   color: rgb(255,255,255);
+   color: rgba(255,255,255, 0.8);
+   margin: 0.5em;
+   padding: 0;
+
 }
 
-@media (min-width: 768px) {
-  .masthead-brand {
-    float: left;
-  }
-  .masthead-nav {
-    float: right;
-  }
+.social__buttons {
+   margin-top: 2em;
+   line-height: 1em;
+   letter-spacing: 0.8em;
 }
 
-
-/*
- * Cover
- */
-
-.cover {
-  padding: 0 20px;
-}
-.cover .btn-lg {
-  padding: 10px 20px;
-  font-weight: bold;
+.social__buttons a {
+   text-decoration: none;
 }
 
-.profile-photo {
+.social__button,
+.social__button:hover {
+   background: transparent;
+   color: rgb(255,255,255);
+   color: rgba(255,255,255, 0.999);
+}
+
+.title {
+   position: absolute;
+   left: 50%;
+   top: 50%;
+   transform: translate(-50%, -50%);
+}
+
+.profile__photo {
    width: 128px;
    height: 128px;
    border-radius: 69px;
@@ -142,56 +157,4 @@ body {
    margin-left: auto;
    margin-right: auto;
    overflow: hidden;
-}
-
-.btn-social,
-.btn-social:hover {
-   background: transparent;
-   border: 0;
-   color: #fff;
-   box-shadow: none;
-}
-
-/*
- * Footer
- */
-
-.mastfoot {
-  color: #999; /* IE8 proofing */
-  color: rgba(255,255,255,.5);
-}
-
-
-/*
- * Affix and center
- */
-
-@media (min-width: 768px) {
-  /* Pull out the header and footer */
-  .masthead {
-    position: fixed;
-    top: 0;
-  }
-  .mastfoot {
-    position: fixed;
-    bottom: 0;
-  }
-  /* Start the vertical centering */
-  .site-wrapper-inner {
-    vertical-align: middle;
-  }
-  /* Handle the widths */
-  .masthead,
-  .mastfoot,
-  .cover-container {
-    width: 100%; /* Must be percentage or pixels for horizontal alignment */
-  }
-}
-
-@media (min-width: 992px) {
-  .masthead,
-  .mastfoot,
-  .cover-container {
-    width: 700px;
-  }
 }
