--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -45,15 +45,13 @@ h4, h5, h6 {
    font-weight: 700;
    color: rgb(51, 51, 51);
    color: rgba(51, 51, 51, 1.0);
-   font-size: 42px;
    letter-spacing: -0.01em;
    margin-bottom: 4px;
 }
 
-li {
-  display: inline-block;
-  list-style-type: none;
-}
+h1 { font-size: 36px; }
+h2 { font-size: 28px; }
+h3 { font-size: 18px; }
 
 blockquote {
   font-style: italic;
@@ -103,6 +101,11 @@ nav > ol  {
   vertical-align: middle;
   margin: 0;
   padding: 0.6em;
+}
+
+.breadcrumb > li, .aside__tags > li {
+  display: inline-block;
+  list-style-type: none;
 }
 
 .breadcrumb>li+li:before {
@@ -157,7 +160,7 @@ main article p {
   margin-bottom: 20px;
   line-height: 1.45;
   letter-spacing: .005rem;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 main article header {
