--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -13,7 +13,7 @@
   <article>
     <div itemscope itemtype="http://schema.org/Article">
       <header>
-        <h2 itemprop="name"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+        <h1 itemprop="name"><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
         <time itemprop="articleBody">{{ .Date.Format "02 Jan 2006" }}</time>
       </header>
       {{ .Content }}
@@ -34,7 +34,7 @@
     </div>
     <div class="aside">
       <h4>Tagged in</h4>
-      <ol>
+      <ol class="aside__tags">
         {{ range .Params.categories }}
         <li>
           <!--<a href="/categories/{{ . | urlize }}.html">-->
