--- a/layouts/partials/end-cover.html
+++ b/layouts/partials/end-cover.html
@@ -1,4 +1,4 @@
-{{ $baseurl := .Site.BaseUrl }}
+{{ $baseurl := .Site.BaseURL }}
 <script src="{{ $baseurl }}/js/styles.min.js" async></script>
 </body>
 </html>
