--- a/layouts/photos/single.html
+++ b/layouts/photos/single.html
@@ -1,9 +1,7 @@
 {{ partial "header.html" . }}
 <nav class="navbar" role="navigation">
   <ol class="breadcrumb">
-    <li><a href="/index.html">Cover</a></li>
-    <li><a href="/photos.html">Images</a></li>
-    <li class="active">{{ .Title }}</li>
+    <li class="active"><a href="/index.html">{{ .Title }}</a></li>
   </ol>
 </nav>
 <main class="photoset__item--single" itemscope itemtype="http://schema.org/Photograph">
