--- a/assets/css/cover.css
+++ b/assets/css/cover.css
@@ -11,6 +11,12 @@ nav > ol  {
   padding: 0.6em;
 }
 
+nav a, nav > ol > li {
+   color: #fff;
+   opacity: 0.8;
+   text-decoration: none;
+}
+
 li {
   display: inline-block;
   list-style-type: none;
@@ -112,7 +118,8 @@ li {
    -webkit-align-items: center;
    align-items: center;
    -webkit-justify-content: center;
-   justify-content: center;
+   justify-content: flex-start;
+   margin-top: 3em;
    min-height: 90vh;
 }
 
