--- a/layouts/partials/end.html
+++ b/layouts/partials/end.html
@@ -1,4 +1,4 @@
-{{ $baseurl := .Site.BaseUrl }}
+{{ $baseurl := .Site.BaseURL }}
 <script src="{{ $baseurl }}/js/picturefill.min.js" defer async></script>
 </body>
 </html>
